# DistributedSampling

./: .gitignore  .sconsign.dblite  CMakeLists.txt  SConscript  SConstruct  cleanup.sh  compile.sh  example.sh
analysis/: convert_results.py  evaluate_comparison.py  evaluate_parallel.py  evaluate_sequential.py  generate_jobs.py  generate_jobs.sh  test_dist.py  weak_scaling.sh
app/: parse_parameters.h  run_experiments.cpp  run_methodD.cpp  run_methodH.cpp  run_methodP.cpp  run_methodR.cpp  run_methodSH.cpp  run_methodSR.cpp
lib/: definitions.h  sampling_config.h
lib/sampling/: methodD.h  methodH.h  methodP.h  methodR.h  methodSH.h
lib/tools/: gen_hyper.h  rhyper.h  spooky_hash.h  var_gen.h
